--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@
 coverage>=3.3; python_version < '3.2'
 coverage>=3.3; python_version > '3.2'
 coverage>=3.3,<4.0; python_version == '3.2'
+coverage>=7.1,<8.0; python_version > '3.6'
+twine
